--- a/system_test/aest_peers_SUITE_data/epoch.yaml.mustache
+++ b/system_test/aest_peers_SUITE_data/epoch.yaml.mustache
@@ -8,6 +8,7 @@ peers: {{^peers}}[]{{/peers}}
 sync:
     port: {{services.sync.port}}
     single_outbound_per_group: false
+    max_inbound: 2
 
 http:
     external:
@@ -29,7 +30,7 @@ chain:
     persist: true
 
 mining:
-    autostart: {{mining.autostart}}
+    autostart: true
     cuckoo:
         miner:
             executable: mean16s-generic
